src/components/views/album-view.sass
.loading
  flex: 1
  display: flex
  flex-direction: column
  justify-content: center
  align-items: center

.wrapper
  flex: 1
  display: flex
  flex-direction: column
  overflow: hidden

  .albumWrapper
    display: flex
    @media (orientation: portrait)
      flex-direction: column
      overflow: auto

    @media (orientation: landscape)
      flex: 1
      overflow: hidden

    .albumInfo
      display: flex
      flex-direction: column
      @media (orientation: landscape)
        overflow: auto
        width: 22em

      border: 0 solid rgb(50, 50, 50)
      border-right-width: 1px

      & > *
        flex-shrink: 0

      .cover
        align-self: center
        width: 12em
        height: 12em
        font-size: 1.5em
        border-radius: 0.1em
        overflow: hidden
        margin: 1.3em

      .albumTitle
        margin: 0 2em 0 2em

      .download
        padding: 0.7em 2em 0.7em 2em
        display: flex
        cursor: pointer
        background-color: rgb(30, 30, 30)

        &:hover
          background-color: rgb(50, 50, 50)

        .icon
          margin-right: 1em

    .musicWrapper
      display: flex
      flex-direction: column

      @media (orientation: landscape)
        overflow: auto
        flex: 3

      .head
        margin: 2em 2em 1em 2em
        h2, h3
          margin: 0

      .discWrapper
        display: flex
        flex-shrink: 0
        flex-direction: column
        border-radius: 2px

        @media (orientation: landscape)
          margin: 0 2em 0 2em

        .trackWrapper
          flex-shrink: 0
          display: flex
          cursor: pointer
          @media (orientation: portrait)
            padding: 1em 2em 1em 2em
          @media (orientation: landscape)
            padding: 0.5em 2em 0.5em 2em
          align-items: center

          background-color: rgb(40, 40, 40)

          &:nth-child(even)
            background-color: rgb(30, 30, 30)

          &:hover
            background-color: rgb(50, 50, 50)

          .number
            width: 1em
            margin-right: 1em
            //padding: 7px
            color: rgb(150, 150, 150)
            display: flex
            justify-content: flex-end

          .title
            flex: 1
            //padding: 7px

